kids-learning-app-done

--- a/KidsLearningApp/index.html
+++ b/KidsLearningApp/index.html
@@ -13,19 +13,19 @@
         <nav>
             <ul >
                 <li>
-                    <a href="">Home</a>
+                    <a href="index.html">Home</a>
                 </li>
                 <li>
-                    <a href="">About</a>
+                    <a href="about.html">About</a>
                 </li>
                 <li>
-                    <a href="">Contact</a>
+                    <a href="contact.html">Contact</a>
                 </li>
                 <li>
-                    <a href="">Gallery</a>
+                    <a href="webgallery.html">Gallery</a>
                 </li>
                 <li>
-                    <a href="">Page</a>
+                    <a href="webgallery.html">Page</a>
                 </li>
                 <li>
                    <button><a href="">Join Class</a></button> 
