some changes in the layout for proper formatting

--- a/RJTechnology/frontend.html
+++ b/RJTechnology/frontend.html
@@ -9,7 +9,7 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
     />
 
-    <title>Document</title>
+    <title>FrontEnd</title>
   </head>
   <body>
     <header>
@@ -23,18 +23,12 @@
       <div id="contact-div">
         <p id="email">Email: rjtechnology@gmail.com</p>
         <p id="phone">Contact: +91 9025741101</p>
-        <div id="icons">
-          <a href="https://www.facebook.com"
-            ><i class="fa-brands fa-facebook"></i
-          ></a>
-          <a href="https://twitter.com"><i class="fa-brands fa-twitter"></i></a>
-          <a href="https://www.instagram.com"
-            ><i class="fa-brands fa-instagram"></i>
-          </a>
-          <a href="https://www.linkedin.com"
-            ><i class="fa-brands fa-linkedin"></i
-          ></a>
-        </div>
+          <div id="icons">
+                <a href="https://www.facebook.com" target="_blank"><i class="fa-brands fa-facebook"></i></a>
+                <a href="https://twitter.com" target="_blank"><i class="fa-brands fa-twitter"></i></a>
+                <a href="https://www.instagram.com" target="_blank"><i class="fa-brands fa-instagram"></i>  </a>              
+                <a href="https://www.linkedin.com" target="_blank"><i class="fa-brands fa-linkedin"></i></a>
+            </div>
       </div>
 
       <nav id="nav">
