remove br and add gap property in flex

--- a/RJTechnology/frontend.html
+++ b/RJTechnology/frontend.html
@@ -81,24 +81,24 @@
                   </ul>
                 </nav>
                 <div class="form">
-                  <input type="text" placeholder="Enter Your Name" /><br />
+                  <input type="text" placeholder="Enter Your Name" />
                   <input
                     type="email"
                     name=""
                     id=""
                     placeholder="Enter Your Email"
-                  /><br />
+                  />
                   <input
                     type="phone"
                     name=""
                     id=""
                     placeholder="Enter Your Mobile Number"
-                  /><br />
+                  />
                   <select>
                     <option value="">Select Course</option>
                     <option value="">DBMS</option>
                     <option value="">Full Stack Developer</option></select
-                  ><br />
+                  >
                   <input type="button" value="Submit Enquiry" />
                 </div>
               </form>
