--- a/RJTechnology/index.html
+++ b/RJTechnology/index.html
@@ -90,24 +90,27 @@
                   </ul>
                 </nav>
                 <div class="form">
-                  <input type="text" placeholder="Enter Your Name" /><br />
+                  <input type="text" placeholder="Enter Your Name" />
                   <input
                     type="email"
                     name=""
                     id=""
                     placeholder="Enter Your Email"
-                  /><br />
+                  />
                   <input
                     type="phone"
                     name=""
                     id=""
                     placeholder="Enter Your Mobile Number"
-                  /><br />
+                  />
                   <select>
                     <option value="">Select Course</option>
-                    <option value="">DBMS</option>
-                    <option value="">Full Stack Developer</option></select
-                  ><br />
+                    <option value="">HTML</option>
+                    <option value="">CSS</option>
+                    <option value="">JavaScript</option>
+                    <option value="">React</option>
+                    </select>
+                    
                   <input type="button" value="Submit Enquiry" />
                 </div>
               </form>
